--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -57,7 +57,7 @@
     </ul>
    </div>
 </div>
-
+<!--
 <div class='innerDash'>
 <table class="table table-striped table-hover ">
 <thead>
@@ -138,5 +138,5 @@
   <div class="tab-pane fade" id="profile">
     <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
   </div>
-</div>
+</div> -->
 </div>
