--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -5,11 +5,9 @@
 <thead>
   <tr>
     <th></th>
-    <th>Corn</th>
+    <th ng-click='getYahoo()'>Corn</th>
     <th>Wheat</th>
     <th>Cherries</th>
-    <th>Soybeans</th>
-    <th>Coffee</th>
   </tr>
 </thead>
 <tbody>
