--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,7 +1,34 @@
 
 
 <div class='innerDash'>
-<table class="table table-striped table-hover ">
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Lesson</a></li>
+    <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">Stock</a></li>
+    <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Chart</a></li>
+    <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+        Dropdown <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
+        <li class="divider"></li>
+        <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+      </ul>
+    </li>
+  </ul>
+
+  <div id="myTabContent" class="tab-content">
+    <div class="tab-pane fade active in" id="weather">
+      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+    </div>
+    <div class="tab-pane fade" id="news">
+      <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+    </div>
+    <div class="tab-pane fade" id="profile">
+      <div id="chartdiv"></div>
+    </div>
+  </div>
+<!-- <table class="table table-striped table-hover ">
 <thead>
   <tr>
     <th></th>
@@ -48,11 +75,10 @@
     <td>8</td>
   </tr>
 </tbody>
-</table>
+</table> -->
 
-<div id="chartdiv"></div>
 
-<ul class="nav nav-tabs">
+<!-- <ul class="nav nav-tabs">
   <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Weather Outlook</a></li>
   <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">News</a></li>
   <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Profile</a></li>
@@ -77,5 +103,5 @@
   </div>
   <div class="tab-pane fade" id="profile">
     <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div>
+  </div> -->
 </div>
