--- a/public/partials/splash.html
+++ b/public/partials/splash.html
@@ -3,5 +3,19 @@
     HI
     {{javaResponse}}
   </h1>
+  <input ng-model='name' type='text'></input>
+
+    <button ng-click='getStockData()'>GET PRICE</button>
+  <input ng-model='num1' type='text'></input>
+  <input ng-model='num2' type='text'></input>
+  <div>{{stockPrice}}</div>
+  <div>{{resultNum}}</div>
+
+
+  <form ng-submit='submitForm()'>
+    <input ng-model='trial' type='text'></input>
+    <input type='submit' value='submit'></input>
+  </form>
+
 
 <div>
