--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,7 +2,7 @@
 
 @import url('http://fonts.googleapis.com/css?family=Covered+By+Your+Grace');
 #chartdiv {
-	background: #282828 url('http://www.amcharts.com/lib/3/patterns/chalk/bg.jpg');color: #fff;
+	// background: #282828 url('http://www.amcharts.com/lib/3/patterns/light/bg.jpg');color: #fff;
 	width	: 100%;
 	height	: 350px;
 }
