--- a/public/partials/splash.html
+++ b/public/partials/splash.html
@@ -17,5 +17,15 @@
     <input type='submit' value='submit'></input>
   </form>
 
+  <div ng-controller='newAccount'>
+  <form ng-submit='createAccount(credentials)'>
+    <label>Username</label>
+    <input ng-model='credentials.userName' type='text'></input>
+    <label>Password</label>
+    <input ng-model='credentials.password' type='text'></input>
+    <input type='submit' value='submit'></input>
+  </form>
+  <div>
+
 
 <div>
