--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -1,4 +1,5 @@
-<div class='innerDash'>
-<nav></nav>
-<div id='brand'>grockr</div>
-</div>
+
+
+<h1>GROCKR</h1>
+<a ui-sref='.dash'>GO</a>
+<div ui-view></div>
