--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,7 +1,76 @@
+<div class="nav-side-menu">
+  <div class="brand"><a ui-sref='splash'>grockr</a></div>
+  <div class="brand">
+    <select ng-model='theme'>
+      <option value=''>grockr</option>
+      <option value='cyborg'>cyborg</option>
+      <option value='slate'>slate</option>
+      <option value='paper'>paper</option>
+      <option value='journal'>journal</option>
+      <option value='cerulean'>cerulean</option>
+      <option value='cosmo'>cosmo</option>
+      <option value='flatly'>flatly</option>
+      <option value='darkly'>darkly</option>
+      <option value='readable'>readable</option>
+      <option value='lumen'>lumen</option>
+      <option value='simplex'>simplex</option>
+      <option value='spacelab'>spacelab</option>
+      <option value='superhero'>superhero</option>
+      <option value='yeti'>yeti</option>
+    </select>
+  </div>
+  <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+  <div class="menu-list">
+    <ul id="menu-content" class="menu-content collapse out">
+      <li>
+        <a ui-sref=".dash">
+          <i class="fa fa-line-chart"></i>Dashboard
+        </a>
+      </li>
+
+      <li  data-toggle="collapse" data-target="#products" class="collapsed active">
+        <a href="#"><i class="fa fa-university"></i></i>Stocks<span class="arrow"></span></a>
+      </li>
+      <ul class="sub-menu collapse" id="products">
+          <li data-toggle='collapse'  data-target='#sub' class="active"><a href="#">Cherries</a></li>
+          <li><a href="#">Corn</a></li>
+          <li><a href="#">Wheat</a></li>
+          <li><a href="#">Dairy</a></li>
+          <li><a href="#">Coffee</a></li>
+          <li><a href="#">Sugar</a></li>
+          <li><a href="#">Soybeans</a></li>
+      </ul>
+
+      <li data-toggle="collapse" data-target="#service" class="collapsed">
+        <a href="#"><i class="fa fa-graduation-cap"></i>Lessons<span class="arrow"></span></a>
+      </li>
+      <ul class="sub-menu collapse" id="service">
+        <li ui-sref='.level1'>Level 1</li>
+        <li ui-sref='.level2'>Level 2</li>
+        <li ui-sref='.level3'>Level 3</li>
+        <li ui-sref='.level4'>Level 4</li>
+      </ul>
 
 
+       <li ui-sref='.profile'>
+        <i class="fa fa-user fa-lg"></i> Profile
+      </li>
+
+       <li ui-sref='.members'>
+        <i class="fa fa-users fa-lg"></i> Members
+
+      </li>
+    </ul>
+   </div>
+</div>
+</div>
+<div>
 <div class='innerDash'>
-  <ul class="nav nav-tabs">
+  <div ui-view></div>
+</div>
+</div>
+
+  <!-- <ul class="nav nav-tabs">
     <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Lesson</a></li>
     <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">Stock</a></li>
     <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Chart</a></li>
@@ -26,8 +95,7 @@
     </div>
     <div class="tab-pane fade" id="profile">
       <div id="chartdiv"></div>
-    </div>
-  </div>
+    </div> -->
 <!-- <table class="table table-striped table-hover ">
 <thead>
   <tr>
@@ -104,4 +172,3 @@
   <div class="tab-pane fade" id="profile">
     <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
   </div> -->
-</div>
