learning angular material

--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -58,7 +58,10 @@
 
        <li ui-sref='.members'>
         <i class="fa fa-users fa-lg"></i> Members
+      </li>
 
+      <li ui-sref='.signup'>
+        <i class="fa fa-github"></i>Access
       </li>
     </ul>
    </div>
