--- a/public/partials/level1.html
+++ b/public/partials/level1.html
@@ -23,5 +23,5 @@
   </div>
   <div class="tab-pane fade" id="profile">
 </div>
-    <div id="chartdiv"></div>
+    <!-- <div id="chartdiv"></div> -->
 </div>
