views/buttons/demo chart

--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -23,7 +23,7 @@
   <div class="menu-list">
     <ul id="menu-content" class="menu-content collapse out">
       <li>
-        <a ui-sref=".dash">
+        <a ui-sref="home">
           <i class="fa fa-line-chart"></i>Dashboard
         </a>
       </li>
