--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -1,5 +1,7 @@
-
-
+<div id='landingBlock'>
 <h1>GROCKR</h1>
-<a ui-sref='.dash'>GO</a>
+<button ui-sref='dash'>GO</button>
+</div>
+
+
 <div ui-view></div>
