--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,7 @@
 @import url("http://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
-.inputdemoIcons .inputIconDemo {
-  min-height: 48px; }
-
-.inputdemoIcons md-input-container:not(.md-input-invalid) > md-icon.email {
-  color: green; }
-
-.inputdemoIcons md-input-container:not(.md-input-invalid) > md-icon.name {
-  color: dodgerblue; }
-
-.inputdemoIcons md-input-container.md-input-invalid > md-icon.email, .inputdemoIcons md-input-container.md-input-invalid > md-icon.name {
-  color: red; }
-
 #chartdiv {
   width: 100%;
   height: 350px; }
-
-h1 {
-  color: #1F01B9; }
 
 .nav-side-menu {
   overflow: auto;
@@ -171,66 +156,108 @@ body {
   width: 85%;
   float: right; }
 
-.tabsdemoDynamicTabs md-content {
-  background-color: transparent !important; }
+#landingBlock {
+  position: relative;
+  background-color: #7fff7c;
+  top: 0;
+  height: 30%;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto; }
 
-.tabsdemoDynamicTabs md-content md-tabs {
-  border: 1px solid #e1e1e1; }
+#CHARTcontainer {
+  box-shadow: 3px 9px 24px -3px rgba(0, 0, 0, 0.75);
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 5%; }
 
-.tabsdemoDynamicTabs md-content md-tabs md-tab-content {
-  background: #f6f6f6; }
+.pagination {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  box-shadow: 0px 7px 25px 2px rgba(0, 0, 0, 0.39); }
 
-.tabsdemoDynamicTabs md-content md-tabs md-tabs-wrapper {
-  background: white; }
-
-.tabsdemoDynamicTabs md-content h1:first-child {
-  margin-top: 0; }
-
-.tabsdemoDynamicTabs md-input-container {
-  padding-bottom: 0; }
-
-.tabsdemoDynamicTabs .remove-tab {
-  margin-bottom: 40px; }
-
-.tabsdemoDynamicTabs .demo-tab > div > div {
-  padding: 25px;
-  box-sizing: border-box; }
-
-.tabsdemoDynamicTabs .edit-form input {
-  width: 100%; }
-
-.tabsdemoDynamicTabs md-tabs {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12); }
-
-.tabsdemoDynamicTabs md-tab[disabled] {
-  opacity: 0.5; }
-
-.tabsdemoDynamicTabs label {
-  text-align: left; }
-
-.tabsdemoDynamicTabs .long > input {
-  width: 264px; }
-
-.tabsdemoDynamicTabs .md-button.add-tab {
-  transform: translateY(5px); }
-
-.fabSpeedDialdemoBasicUsage .text-capitalize {
-  text-transform: capitalize; }
-
-.fabSpeedDialdemoBasicUsage .md-fab:hover, .fabSpeedDialdemoBasicUsage .md-fab.md-focused {
-  background-color: #000 !important; }
-
-.fabSpeedDialdemoBasicUsage p.note {
-  font-size: 1.2rem; }
-
-.fabSpeedDialdemoBasicUsage .lock-size {
-  min-width: 300px;
-  min-height: 300px;
-  width: 300px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto; }
+.nav-side-menu {
+  box-shadow: 7px 7px 25px 2px rgba(0, 0, 0, 0.39); }
 
 /*# sourceMappingURL=style.css.map */
+.btn3d {
+  position: relative;
+  top: -6px;
+  border: 0;
+  transition: all 40ms linear;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 2px;
+  margin-right: 2px; }
+
+.btn3d:active:focus,
+.btn3d:focus:hover,
+.btn3d:focus {
+  -moz-outline-style: none;
+  outline: medium none; }
+
+.btn3d:active, .btn3d.active {
+  top: 2px; }
+
+.btn3d.btn-white {
+  color: #666666;
+  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(255, 255, 255, 0.1) inset, 0 8px 0 0 #f5f5f5, 0 8px 8px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fff; }
+
+.btn3d.btn-white:active, .btn3d.btn-white.active {
+  color: #666666;
+  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.1);
+  background-color: #fff; }
+
+.btn3d.btn-default {
+  color: #666666;
+  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(255, 255, 255, 0.1) inset, 0 8px 0 0 #BEBEBE, 0 8px 8px 1px rgba(0, 0, 0, 0.2);
+  background-color: #f9f9f9; }
+
+.btn3d.btn-default:active, .btn3d.btn-default.active {
+  color: #666666;
+  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9; }
+
+.btn3d.btn-primary {
+  box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #4D5BBE, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+  background-color: #4274D7; }
+
+.btn3d.btn-primary:active, .btn3d.btn-primary.active {
+  box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+  background-color: #4274D7; }
+
+.btn3d.btn-success {
+  box-shadow: 0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+  background-color: #78d739; }
+
+.btn3d.btn-success:active, .btn3d.btn-success.active {
+  box-shadow: 0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+  background-color: #78d739; }
+
+.btn3d.btn-info {
+  box-shadow: 0 0 0 1px #00a5c3 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #348FD2, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+  background-color: #39B3D7; }
+
+.btn3d.btn-info:active, .btn3d.btn-info.active {
+  box-shadow: 0 0 0 1px #00a5c3 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+  background-color: #39B3D7; }
+
+.btn3d.btn-warning {
+  box-shadow: 0 0 0 1px #d79a47 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #D79A34, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+  background-color: #FEAF20; }
+
+.btn3d.btn-warning:active, .btn3d.btn-warning.active {
+  box-shadow: 0 0 0 1px #d79a47 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+  background-color: #FEAF20; }
+
+.btn3d.btn-danger {
+  box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+  background-color: #D73814; }
+
+.btn3d.btn-danger:active, .btn3d.btn-danger.active {
+  box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+  background-color: #D73814; }
 
 /*# sourceMappingURL=style.css.map */
