--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,10 +7,8 @@
 	height	: 350px;
 }
 
-  
 
-h1 {
-  color: #1F01B9; }
+
 
 
   .nav-side-menu {
@@ -172,51 +170,39 @@ h1 {
   float: right;
 }
 
+#landingBlock{
+	position: relative;
+	background-color: rgb(127, 255, 124);
+	top: 0;
+	height: 30%;
+	width: 100%;
+text-align: center;
+	margin: 0 auto;
+}
 
 
-.tabsdemoDynamicTabs md-content {
-  background-color: transparent !important; }
-  .tabsdemoDynamicTabs md-content md-tabs {
-    border: 1px solid #e1e1e1; }
-    .tabsdemoDynamicTabs md-content md-tabs md-tab-content {
-      background: #f6f6f6; }
-    .tabsdemoDynamicTabs md-content md-tabs md-tabs-wrapper {
-      background: white; }
-  .tabsdemoDynamicTabs md-content h1:first-child {
-    margin-top: 0; }
-.tabsdemoDynamicTabs md-input-container {
-  padding-bottom: 0; }
-.tabsdemoDynamicTabs .remove-tab {
-  margin-bottom: 40px; }
-.tabsdemoDynamicTabs .demo-tab > div > div {
-  padding: 25px;
-  box-sizing: border-box; }
-.tabsdemoDynamicTabs .edit-form input {
-  width: 100%; }
-.tabsdemoDynamicTabs md-tabs {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12); }
-.tabsdemoDynamicTabs md-tab[disabled] {
-  opacity: 0.5; }
-.tabsdemoDynamicTabs label {
-  text-align: left; }
-.tabsdemoDynamicTabs .long > input {
-  width: 264px; }
-.tabsdemoDynamicTabs .md-button.add-tab {
-  transform: translateY(5px); }
+#CHARTcontainer{
+	box-shadow: 3px 9px 24px -3px rgba(0,0,0,0.75);
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 5%;
+}
 
 
 
-	.fabSpeedDialdemoBasicUsage .text-capitalize {
-  text-transform: capitalize; }
-.fabSpeedDialdemoBasicUsage .md-fab:hover, .fabSpeedDialdemoBasicUsage .md-fab.md-focused {
-  background-color: #000 !important; }
-.fabSpeedDialdemoBasicUsage p.note {
-  font-size: 1.2rem; }
-.fabSpeedDialdemoBasicUsage .lock-size {
-  min-width: 300px;
-  min-height: 300px;
-  width: 300px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto; }
+.pagination{
+	width: 100%;
+	text-align: center;
+	margin: 0 auto;
+	box-shadow: 0px 7px 25px 2px rgba(0,0,0,0.39);
+}
+
+
+.nav-side-menu{
+	box-shadow: 7px 7px 25px 2px rgba(0,0,0,0.39);
+
+}
+
+
+
 /*# sourceMappingURL=style.css.map */
