--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,7 +1,7 @@
 <div class="nav-side-menu">
   <div class="brand"><a ui-sref='splash'>grockr</a></div>
   <div class="brand">
-    <select ng-model='theme'>
+    <select ng-model='selectTheme'>
       <option value=''>grockr</option>
       <option value='cyborg'>cyborg</option>
       <option value='slate'>slate</option>
