--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
+@import url("http://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
 #chartdiv {
   width: 100%;
   height: 350px; }
@@ -167,7 +168,7 @@ body {
 
 #CHARTcontainer {
   box-shadow: 3px 9px 24px -3px rgba(0, 0, 0, 0.75);
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 5%; }
 
@@ -179,6 +180,58 @@ body {
 
 .nav-side-menu {
   box-shadow: 7px 7px 25px 2px rgba(0, 0, 0, 0.39); }
+
+.box {
+  border-radius: 3px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  padding: 10px 25px;
+  text-align: right;
+  display: block;
+  margin-top: 60px; }
+
+.box-icon {
+  background-color: #57a544;
+  border-radius: 50%;
+  display: table;
+  height: 100px;
+  margin: 0 auto;
+  width: 100px;
+  margin-top: -61px; }
+
+.box-icon span {
+  color: #fff;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle; }
+
+.info h4 {
+  font-size: 26px;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+
+.info > p {
+  color: #717171;
+  font-size: 16px;
+  padding-top: 10px;
+  text-align: justify; }
+
+.info > a {
+  background-color: #03a9f4;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: #fff;
+  transition: all 0.5s ease 0s; }
+
+.info > a:hover {
+  background-color: #0288d1;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.12);
+  color: #fff;
+  transition: all 0.5s ease 0s; }
+
+.lessonContainer {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 5%; }
 
 /*# sourceMappingURL=style.css.map */
 .btn3d {
