decided on design principles

--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -27,15 +27,15 @@
 	  </div>
     <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-        <div class="box">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-ok"></span>BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="glyphicon glyphicon-remove"></span>SELL</button>
+        <div class="box" style="text-align: center;">
+          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
+          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-        <div class="box">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-ok"></span>BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="glyphicon glyphicon-remove"></span>SELL</button>        </div>
+        <div class="box" style="text-align: center;">
+          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
+          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>        </div>
       </div>
     </div>
 </div>
