--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -1,6 +1,7 @@
 <div id='landingBlock'>
-<h1 id='titleBlock'>grockr</h1>
-<button ui-sref='dash'>GO</button>
+  <h1 id='titleBlock'>grockr</h1>
+  <br>
+  <button type="button" ui-sref='dash' class="btn btn-primary btn-lg btn3d"><span class=""></span>GO</button>
 </div>
 
 
