--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,4 +1,5 @@
 <div ng-controller="DemoCtrl" layout="column" ng-cloak>
+<div class='box'>
   <br/>
   <md-content layout-padding class="autoScroll">
     <md-input-container class="md-icon-float" >
@@ -12,4 +13,5 @@
       <input ng-model="user.passwordConf" type="password" placeholder="Password Confirmation" ng-required="true">
     </md-input-container>
   </md-content>
+</div>
 </div>
