--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -1,1 +1,34 @@
+<!-- <div class='innerDash'> -->
+<div class='container'>
 <h1>Orders</h1>
+<div class="table">
+    <div class="row header">
+      <div class="cell">
+        Name
+      </div>
+      <div class="cell">
+        Age
+      </div>
+      <div class="cell">
+        Occupation
+      </div>
+      <div class="cell">
+        Location
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="cell">
+        Luke Peters
+      </div>
+      <div class="cell">
+        25
+      </div>
+      <div class="cell">
+        Freelance Web Developer
+      </div>
+      <div class="cell">
+        Brookline, MA
+      </div>
+    </div>
+</div>
