incorporating uniform color scheme

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -1,7 +1,7 @@
 <div id='landingBlock'>
   <h1 id='titleBlock'>grockr</h1>
   <br>
-  <button type="button" ui-sref='dash' class="btn btn-primary btn-lg btn3d"><span class=""></span>GO</button>
+  <button type="button" ui-sref='dash' id='landingButton' class="btn btn-primary btn-lg btn3d"><span class="fa fa-2x fa-smile-o"></span></button>
 </div>
 
 
