--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -2,6 +2,9 @@
 
 
 #titleBlock{
-  color: red;
-  font-family: sans-serif;
+  color: #FFFF00;
+  font-family: Nunito;
+  font-size: 12em;
+  text-shadow: 1px 4px 5px #777;
+
 }
