--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,5 +1,5 @@
 <div class="nav-side-menu">
-  <div class="brand"><h3 id='dashBrand' ui-sref='splash'>grockr</h3></div>
+  <div class="brand"><h3 id='dashBrand' ui-sref='home'>grockr</h3></div>
   <!-- <div class="brand">
     <select ng-model='selectTheme'>
       <option value=''>grockr</option>
@@ -54,6 +54,11 @@
       <li ui-sref='.calculator'>
          <a href="#"><i class="fa fa-calculator"></i>Calculator</a>
       </li>
+
+      <li ui-sref='.library'>
+         <a href="#"><i class="fa fa-folder-o"></i>Library</a>
+      </li>
+
 
       <li ui-sref='.orders'>
         <a href="#"><i class="fa fa-rocket"></i>Orders</a>
