--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -163,7 +163,7 @@ body {
   width: 100%;
   text-align: center;
   margin: 0 auto;
-  margin-top: 20%; }
+  margin-top: 15%; }
 
 #CHARTcontainer {
   box-shadow: 3px 9px 24px -3px rgba(0, 0, 0, 0.75);
@@ -189,7 +189,7 @@ body {
   margin-top: 60px; }
 
 .box-icon {
-  background-color: #57a544;
+  background-color: #76FF03;
   border-radius: 50%;
   display: table;
   height: 100px;
@@ -232,15 +232,31 @@ body {
   margin: 0 auto;
   margin-top: 5%; }
 
-h1 titleBlock {
-  font-family: 'Nunito', sans-serif; }
-
 #dashBrand {
-  color: #DCFA16;
+  color: #FFFF00;
+  font-family: Nunito;
   padding: 10px; }
 
 .nav-side-menu {
   color: #DCFA16; }
+
+.circle {
+  margin: 0 auto;
+  padding: 50px;
+  border-radius: 100%;
+  height: 200px;
+  width: 200px;
+  text-align: center;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  display: block;
+  margin-top: 4%;
+  background-color: #2979FF; }
+
+#librarySearchBar {
+  margin: 0 auto;
+  margin-top: 4%;
+  width: 30%;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
 .btn3d {
@@ -292,7 +308,7 @@ h1 titleBlock {
 
 .btn3d.btn-success {
   box-shadow: 0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-  background-color: #78d739; }
+  background-color: #76FF03; }
 
 .btn3d.btn-success:active, .btn3d.btn-success.active {
   box-shadow: 0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
@@ -316,14 +332,19 @@ h1 titleBlock {
 
 .btn3d.btn-danger {
   box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-  background-color: #D73814; }
+  background-color: #FF3D00; }
 
 .btn3d.btn-danger:active, .btn3d.btn-danger.active {
   box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
   background-color: #D73814; }
 
+#landingButton {
+  border-radius: 100%; }
+
 #titleBlock {
-  color: red;
-  font-family: sans-serif; }
+  color: #FFFF00;
+  font-family: Nunito;
+  font-size: 12em;
+  text-shadow: 1px 4px 5px #777; }
 
 /*# sourceMappingURL=style.css.map */
