--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -47,7 +47,7 @@
 }
 .btn3d.btn-success {
     box-shadow:0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255,255,255,0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0,0,0,0.5);
-    background-color:#78d739;
+    background-color:#76FF03;
 }
 .btn3d.btn-success:active, .btn3d.btn-success.active {
     box-shadow:0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255,255,255,0.15) inset, 0 1px 3px 1px rgba(0,0,0,0.3);
@@ -71,9 +71,13 @@
 }
 .btn3d.btn-danger {
     box-shadow:0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255,255,255,0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0,0,0,0.5);
-    background-color:#D73814;
+    background-color:#FF3D00;
 }
 .btn3d.btn-danger:active, .btn3d.btn-danger.active {
     box-shadow:0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255,255,255,0.15) inset, 0 1px 3px 1px rgba(0,0,0,0.3);
     background-color: #D73814;
+}
+
+#landingButton{
+  border-radius: 100%;
 }
