--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -176,7 +176,7 @@
 	width: 100%;
 	text-align: center;
 	margin: 0 auto;
-	margin-top: 20%;
+	margin-top: 15%;
 
 }
 
@@ -214,7 +214,7 @@
     margin-top: 60px;
 }
 .box-icon {
-    background-color: #57a544;
+    background-color: #76FF03;
     border-radius: 50%;
     display: table;
     height: 100px;
@@ -261,17 +261,36 @@
 
 }
 
-h1 titleBlock{
-font-family: 'Nunito', sans-serif;
-}
 
 #dashBrand{
-	color: #DCFA16;
+	color: #FFFF00;
+	font-family: Nunito;
 	padding: 10px;
 }
 
 .nav-side-menu{
 	color: #DCFA16;
+}
+
+.circle{
+	margin: 0 auto;
+	padding: 50px;
+	border-radius: 100%;
+	height: 200px;
+	width: 200px;
+	text-align: center;
+	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	display: block;
+	margin-top: 4%;
+	background-color:#2979FF;
+
+}
+
+#librarySearchBar{
+	margin: 0 auto;
+	margin-top: 4%;
+	width: 30%;
+	text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
