all ui-routes in place/ starting controller logic

--- a/public/partials/calculator.html
+++ b/public/partials/calculator.html
@@ -1,3 +1,37 @@
-<div class='container'>
+<!-- <div class='container'> -->
   <h1>Calculate this!</h1>
-</div>
+  <!-- <div class="row"> -->
+    <div id='librarySearchBar' class="input-group">
+      <label>If I buy...</label>
+      <input ng-model='quantity' type="text" class="form-control"  placeholder="this many...">
+    </div><!-- /input-group -->
+  <!-- </div> -->
+  <!-- <div class="row"> -->
+    <div id='librarySearchBar' class="input-group">
+      <label>Of</label>
+      <input type="text" class="form-control"  placeholder="this stock...">
+    </div><!-- /input-group -->
+  <!-- </div>
+  <div class="row"> -->
+    <div id='librarySearchBar' class="input-group">
+      <label>@</label>
+      <input ng-model='priceStart' type="text" class="form-control"  placeholder="this price...">
+    </div><!-- /input-group -->
+  <!-- </div>
+  <div class="row"> -->
+    <div id='librarySearchBar' class="input-group">
+      <label>And the price goes to</label>
+      <input ng-model='priceEnd' type="text" class="form-control"  placeholder=" $$$ this...">
+    </div><!-- /input-group -->
+    <div id='librarySearchBar' class="input-group">
+      <label>And my broker has charged...</label>
+      <input ng-model='fee' type="text" class="form-control"  placeholder=" per trade">
+    </div><!-- /input-group -->
+  <!-- </div>
+  <div class="row"> -->
+    <div id='librarySearchBar' class="input-group">
+      <label>Then I have <span ng-model='winloss'></span></label>
+      <input type="text" class="form-control"  placeholder='HI' value='{{result}}'>
+    </div><!-- /input-group -->
+  <!-- </div> -->
+<!-- </div> -->
