--- a/public/partials/chart.html
+++ b/public/partials/chart.html
@@ -1,18 +1,6 @@
+<script src="http://code.highcharts.com/stock/highstock.js"></script>
+<script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+
 <div class='lessonContainer'>
 <div id="CHARTcontainer" style="height: 400px; max-width: 100%;min-width: 310px"></div>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-4x fa-html5"></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
