--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -1,41 +1,3 @@
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-4x fa fa-apple"></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Apple</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                  <span class="fa fa-4x fa fa-windows"></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Microsoft</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
-                </div>
-            </div>
-        </div>
-	  </div>
-    <div class='row'>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-        <div class="box" style="text-align: center;">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-        <div class="box" style="text-align: center;">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>        </div>
-      </div>
-    </div>
+    <h2>Lesson 1 and stuff</h1>
 </div>
