--- a/public/partials/level2.html
+++ b/public/partials/level2.html
@@ -1,2 +1,9 @@
-<h1> Level 2</h1>
-<div id="container" style="height: 400px"></div>
+<h2 style="text-align:center;">Level 2</h2>
+<div class='container'>
+  <div class='row' style="text-align:center;">
+    <button type="button" ui-sref='.lesson2' class="btn3d btn btn-white btn-lg"><span class="fa fa-graduation-cap"></span> Lesson </button>
+    <button type="button" ui-sref='.stock2' class="btn3d btn btn-white btn-lg"><span class="fa fa-university"></span> Stock</button>
+    <button type="button" ui-sref='.chart2' ng-click='chart2()' class="btn3d btn btn-white btn-lg"><span class="fa fa-area-chart"></span> Chart</button>
+  </div>
+</div>
+<div ui-view></div>
