--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,5 +1,5 @@
-  <div class='box'>
-  <h1 ng-click='java()'>
+  <div class='box' style='text-align: center;'>
+  <!-- <h1 ng-click='java()'>
     HI
     {{javaResponse}}
   </h1>
@@ -10,19 +10,15 @@
   <input ng-model='num2' type='text'></input>
   <div>{{stockPrice}}</div>
   <div>{{resultNum}}</div>
+ -->
 
 
-  <form ng-submit='submitForm()'>
-    <input ng-model='trial' type='text'></input>
-    <input type='submit' value='submit'></input>
-  </form>
-
-  <div ng-controller='newAccount'>
-  <form ng-submit='createAccount(credentials)'>
+  <h1>Login!</h1>
+  <form ng-submit='login(credentials)'>
     <label>Username</label>
-    <input ng-model='credentials.userName' type='text'></input>
+    <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
     <label>Password</label>
-    <input ng-model='credentials.password' type='text'></input>
+    <input ng-model='credentials.password' style='text-align: center;' type='password'></input>
     <input type='submit' value='submit'></input>
   </form>
   </div>
