--- a/public/partials/level1.html
+++ b/public/partials/level1.html
@@ -2,7 +2,7 @@
 <div class='container'>
   <div class='row' style="text-align:center;">
     <button type="button" ui-sref='.lesson1' class="btn3d btn btn-white btn-lg"><span class="fa fa-graduation-cap"></span> Lesson </button>
-    <button type="button" ui-sref='.stock1' class="btn3d btn btn-white btn-lg"><span class="fa fa-university"></span> Stock</button>
+    <button type="button" ui-sref='.stock1' ng-click='getYahoo()' class="btn3d btn btn-white btn-lg"><span class="fa fa-university"></span> Stock</button>
     <button type="button" ui-sref='.chart' ng-click='chart()' class="btn3d btn btn-white btn-lg"><span class="fa fa-area-chart"></span> Chart</button>
   </div>
 </div>
