--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -28,12 +28,12 @@
     <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <h3>{{stockPrice}}</h3>
+          <h3>{{aapl | currency}}</h3>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <h3>{{priceOfMSFT}}</h3>
+          <h3>{{msft | currency}}</h3>
         </div>
       </div>
     </div>
