--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -1,34 +1,24 @@
-<!-- <div class='innerDash'> -->
 <div class='container'>
 <h1>Orders</h1>
-<div class="table">
-    <div class="row header">
-      <div class="cell">
-        Name
-      </div>
-      <div class="cell">
-        Age
-      </div>
-      <div class="cell">
-        Occupation
-      </div>
-      <div class="cell">
-        Location
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="cell">
-        Luke Peters
-      </div>
-      <div class="cell">
-        25
-      </div>
-      <div class="cell">
-        Freelance Web Developer
-      </div>
-      <div class="cell">
-        Brookline, MA
-      </div>
-    </div>
+<div class='box'>
+<table class="table table-striped table-bordered">
+  <thead>
+    <th>Stock</th>
+    <th>Quantity</th>
+    <th>Buy Price</th>
+    <th>Current Price</th>
+    <th>Profit / Loss</th>
+    <th>Close Order</th>
+  </thead>
+  <tbody>
+    <tr ng-repeat="order in orders">
+      <td>order.stock</td>
+      <td>order.qty</td>
+      <td>order.buyPrice</td>
+      <td>{{currentPrice}}</td>
+      <td>{{profitLoss}}</td>
+      <td><button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button></td>
+    </tr>
+  </tbody>
+</table>
 </div>
