refactor with ngStorage

--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -37,6 +37,18 @@
         </div>
       </div>
     </div>
+    <div class='row' ng-controller='sentimentController'>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="box" style="text-align: center;">
+          <span class='{{face}}'></span>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="box" style="text-align: center;">
+          <span class='{{face}}'></span>
+        </div>
+      </div>
+    </div>
     <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
