--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -278,6 +278,9 @@ body {
   width: 30%;
   text-align: center; }
 
+#portalRow {
+  margin-top: 5%; }
+
 /*# sourceMappingURL=style.css.map */
 .btn3d {
   position: relative;
