--- a/public/partials/calculator.html
+++ b/public/partials/calculator.html
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='container' style='margin-bottom: 2em;'>
   <div class='box calculator'>
     <h4>Simple Buy/Sell</h4>
     <br>
@@ -83,13 +83,13 @@
     <div class="row" style='text-align:left;'>
       <div class="col-xs-3 col-sm-6">
         <div class="input-group">
-          <label>Then you can afford...</label>
-          <h4>{{afford | number:0}} units of stock</h4>
+          <label>Then you can buy...</label>
+          <h4>{{afford | number:0}} shares of stock</h4>
         </div>
       </div>
       <div class="col-xs-3 col-sm-6">
         <div class="input-group">
-          <label>And you will spend...</label>
+          <label>for...</label>
           <h4>{{spend | currency}}</h4>
         </div>
       </div>
@@ -117,6 +117,8 @@
           <h4>{{sell | currency}}</h4>
         </div>
       </div>
+    </div>
+    <div class='row' style='text-align:left;'>
     </div>
     </div>
   </div>
