--- a/public/partials/stock2.html
+++ b/public/partials/stock2.html
@@ -13,6 +13,20 @@
             </div>
         </div>
     </div>
+    <div class='row'>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="box" style="text-align: center;">
+          <h3>{{goog | currency}}</h3>
+        </div>
+      </div>
+    </div>
+    <!-- <div class='row' ng-controller='sentimentController'>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="box" style="text-align: center;">
+          <span class='{{face}}'></span>
+        </div>
+      </div>
+    </div> -->
         <div class='row'>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box" style="text-align: center;">
