work/ refresh problem

--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,4 +1,4 @@
-<div ng-controller="DemoCtrl" layout="column" ng-cloak>
+<div layout="column" ng-cloak>
   <div class='box' style='text-align: center;'>
   <h1>Sign Up!</h1>
   <br>
