--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,24 +1,5 @@
 <div class="nav-side-menu">
-  <div class="brand"><h3 id='dashBrand' ui-sref='home'>grockr</h3></div>
-  <!-- <div class="brand">
-    <select ng-model='selectTheme'>
-      <option value=''>grockr</option>
-      <option value='cyborg'>cyborg</option>
-      <option value='slate'>slate</option>
-      <option value='paper'>paper</option>
-      <option value='journal'>journal</option>
-      <option value='cerulean'>cerulean</option>
-      <option value='cosmo'>cosmo</option>
-      <option value='flatly'>flatly</option>
-      <option value='darkly'>darkly</option>
-      <option value='readable'>readable</option>
-      <option value='lumen'>lumen</option>
-      <option value='simplex'>simplex</option>
-      <option value='spacelab'>spacelab</option>
-      <option value='superhero'>superhero</option>
-      <option value='yeti'>yeti</option>
-    </select>
-  </div> -->
+  <div class="brand"><h4 id='dashBrand' ui-sref='home'>{{nameSpace}}</h4></div>
   <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
   <div class="menu-list">
     <ul id="menu-content" class="menu-content collapse out">
@@ -27,28 +8,12 @@
           <i class="fa fa-line-chart"></i>Intro
         </a>
       </li>
-
-      <!-- <li  data-toggle="collapse" data-target="#products" class="collapsed active">
-        <a href="#"><i class="fa fa-university"></i></i>Stocks<span class="arrow"></span></a>
-      </li>
-      <ul class="sub-menu collapse" id="products">
-          <li data-toggle='collapse'  data-target='#sub' class="active"><a href="#">Cherries</a></li>
-          <li><a href="#">Corn</a></li>
-          <li><a href="#">Wheat</a></li>
-          <li><a href="#">Dairy</a></li>
-          <li><a href="#">Coffee</a></li>
-          <li><a href="#">Sugar</a></li>
-          <li><a href="#">Soybeans</a></li>
-      </ul> -->
-
       <li data-toggle="collapse" data-target="#service" class="collapsed">
         <a href="#"><i class="fa fa-graduation-cap"></i>Lessons<span class="arrow"></span></a>
       </li>
       <ul class="sub-menu collapse" id="service">
         <li ui-sref='.level1'>Level 1</li>
         <li ui-sref='.level2'>Level 2</li>
-        <!-- <li ui-sref='.level3'>Level 3</li>
-        <li ui-sref='.level4'>Level 4</li> -->
       </ul>
 
       <li ui-sref='.calculator'>
@@ -77,106 +42,3 @@
   <div ui-view></div>
 </div>
 </div>
-
-  <!-- <ul class="nav nav-tabs">
-    <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Lesson</a></li>
-    <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">Stock</a></li>
-    <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Chart</a></li>
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-        Dropdown <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-        <li class="divider"></li>
-        <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-      </ul>
-    </li>
-  </ul>
-
-  <div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade active in" id="weather">
-      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-    </div>
-    <div class="tab-pane fade" id="news">
-      <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-    </div>
-    <div class="tab-pane fade" id="profile">
-      <div id="chartdiv"></div>
-    </div> -->
-<!-- <table class="table table-striped table-hover ">
-<thead>
-  <tr>
-    <th></th>
-    <th ng-click='getYahoo()'>Corn</th>
-    <th>Wheat</th>
-    <th>Cherries</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>NEWS</td>
-    <td><i class="fa fa-smile-o fa-2x"></i></td>
-    <td><i class="fa fa-frown-o fa-2x"></i></td>
-    <td><i class="fa fa-frown-o fa-2x"></i></td>
-  </tr>
-  <tr>
-    <td>WEATHER</td>
-    <td>SUNSHINE</td>
-    <td>STORMY</td>
-    <td>DRY</td>
-  </tr>
-  <tr >
-    <td>REPORTS</td>
-    <td>GOOD</td>
-    <td>GOOD</td>
-    <td>OK</td>
-  </tr>
-  <tr>
-    <td>VOLUME</td>
-    <td>+</td>
-    <td>-</td>
-    <td>+</td>
-  </tr>
-  <tr>
-    <td>IN SEASON</td>
-    <td>√</td>
-    <td>X</td>
-    <td>√</td>
-  </tr>
-  <tr class='success'>
-    <td>TOTAL POINTS</td>
-    <td>10</td>
-    <td>6</td>
-    <td>8</td>
-  </tr>
-</tbody>
-</table> -->
-
-
-<!-- <ul class="nav nav-tabs">
-  <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Weather Outlook</a></li>
-  <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">News</a></li>
-  <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Profile</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-      Dropdown <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-      <li class="divider"></li>
-      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-    </ul>
-  </li>
-</ul>
-
-<div id="myTabContent" class="tab-content">
-  <div class="tab-pane fade active in" id="weather">
-    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-  </div>
-  <div class="tab-pane fade" id="news">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div>
-  <div class="tab-pane fade" id="profile">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div> -->
