--- a/public/partials/chart.html
+++ b/public/partials/chart.html
@@ -2,5 +2,10 @@
 <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 
 <div class='lessonContainer'>
+  <div class='row'>
     <div id="CHARTcontainer" style="height: 400px; max-width: 100%;min-width: 310px"></div>
+  </div>
+  <div class='row' style='margin-bottom: 5%;'>
+    <div id="CHART3container" style="height: 400px; max-width: 100%;min-width: 310px"></div>
+  </div>
 </div>
