--- a/public/partials/portal.html
+++ b/public/partials/portal.html
@@ -1,12 +1,10 @@
 <div class='container'>
   <div class='row' id='portalRow' style='text-align:center;'>
-        <button ui-sref='.login' type="button" style='margin: 10px;' class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-ok"></span> Login</button>
-        <button ui-sref='.register' type="button" style='margin: 10px;' class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> Sign Up</button>
-        <button type="button" style='margin: 10px;'  data-toggle="modal" data-target="#myModal" class="btn btn-danger btn-lg btn3d"><span class="glyphicon glyphicon-leaf"></span> LogOut</button>
+        <button ui-sref='.login' type="button" style='margin: 10px;' class="btn btn-primary btn-block btn3d"><span class="glyphicon glyphicon-ok"></span> Login</button>
+        <button ui-sref='.register' type="button" style='margin: 10px;' class="btn btn-success btn-block btn3d"><span class="glyphicon glyphicon-cloud"></span> Sign Up</button>
+        <button type="button" style='margin: 10px;'  data-toggle="modal" data-target="#myModal" class="btn btn-danger btn-block btn3d"><span class="glyphicon glyphicon-leaf"></span> LogOut</button>
   </div>
 
-
-  <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content" style='text-align:center;'>
@@ -14,10 +12,9 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h2 class="modal-title" id="myModalLabel">Are you sure?</h2>
         </div>
-        <div class="modal-body">
-        </div>
+
         <div class="modal-footer" style='text-align:center;'>
-          <button type="button" data-dismiss='modal'  class="btn btn-primary">Cancel</button>
+          <button type="button" style='margin: 10px;' data-dismiss='modal' class="btn btn-info btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> Cancel</button>
           <button type="button" ng-click='logout()' data-dismiss='modal' style='margin: 10px;' class="btn btn-danger btn-lg btn3d"><span class="glyphicon glyphicon-leaf"></span>  Yes, Please!</button>
         </div>
       </div>
