--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -37,7 +37,8 @@
         </div>
       </div>
     </div>
-    <div class='row' ng-controller='sentimentController'>
+    <!-- <div class='row' ng-controller='sentimentController'> -->
+    <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
           <span class='{{face}}'></span>
@@ -52,14 +53,61 @@
     <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
+          <button type="button" data-toggle="modal" data-target="#aaplModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
           <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>        </div>
+          <button type="button" data-toggle="modal" data-target="#msftModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
+          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
+        </div>
       </div>
     </div>
+</div>
+
+
+<div class="modal fade" id="msftModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style='text-align:center;'>
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title" id="myModalLabel">New Order</h2>
+      </div>
+      <div class="modal-body" style='text-align: center;'>
+          <label>Stock</label>
+          <h5 style='text-align: center;' value=type='text'>Microsoft</h5>
+          <label>Price</label>
+          <h5 style='text-align: center;' type='text'>{{msft}}</h5>
+          <label>Quantity</label><br>
+          <input ng-model='MSFTqty'  style='text-align: center;' type='number'></input>
+          <h3>Order Total: {{msft* MSFTqty || 0 | currency}}</h3>
+      </div>
+      <div class="modal-footer" style='text-align:center;'>
+        <button type="button" data-dismiss="modal" ng-click="msftOrder()" style='margin: 10px;' class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> BUY</button>
+      </div>
+  </div>
+</div>
+</div>
+<div class="modal fade" id="aaplModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style='text-align:center;'>
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title" id="myModalLabel">New Order</h2>
+      </div>
+      <div class="modal-body" style='text-align: center;'>
+          <label>Stock</label>
+          <h5 style='text-align: center;' value=type='text'>Apple</h5>
+          <label>Price</label>
+          <h5 style='text-align: center;' type='text'>{{aapl}}</h5>
+          <label>Quantity</label><br>
+          <input ng-model='qty' style='text-align: center;' type='number'></input>
+          <h3>Order Total: {{aapl* qty || 0 | currency}}</h3>
+      </div>
+      <div class="modal-footer" style='text-align:center;'>
+        <button type="button" data-dismiss="modal" ng-click="aaplOrder()"  style='margin: 10px;' class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> BUY</button>
+      </div>
+    </div>
+  </div>
 </div>
