--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -95,6 +95,11 @@
     background-color: #D73814;
 }
 
+#orderButton{
+  box-shadow:0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255,255,255,0.15) inset, 0 1px 3px 1px rgba(0,0,0,0.3);
+  background-color: #78d739;
+}
+
 #landingButton{
   border-radius: 100%;
 }
