--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -181,11 +181,11 @@
 }
 
 
-#CHARTcontainer{
+#CHARTcontainer, #CHART2container, #CHART3container{
 	box-shadow: 3px 9px 24px -3px rgba(0,0,0,0.75);
 	width: 100%;
 	margin: 0 auto;
-	margin-top: 5%;
+	margin-top: 5%; 
 }
 
 
