--- a/public/partials/calculator.html
+++ b/public/partials/calculator.html
@@ -74,7 +74,7 @@
       </div>
       <div class="col-xs-3 col-sm-6">
         <div class="input-group">
-          <label>And a stock is trading at</label>
+          <label>And the stock is trading at</label>
           <input ng-model='price' type="text" class="form-control"  placeholder="$$$">
         </div>
       </div>
