--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,7 +1,7 @@
 <div class='box' style='text-align: center;'>
-  <h1>Login!</h1>
+  <h1 style='font-family: Nunito;'>Login!</h1>
   <br>
-  <form ng-submit='login(credentials)'>
+  <form class='ioForm' ng-submit='login(credentials)'>
     <label>Username</label>
     <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
     <label>Password</label>
