--- a/public/partials/portal.html
+++ b/public/partials/portal.html
@@ -1,8 +1,8 @@
 <div class='container'>
   <div class='row' id='portalRow' style='text-align:center;'>
-        <button ui-sref='.login' type="button" style='margin: 10px;' class="btn btn-primary btn-block btn3d"><span class="glyphicon glyphicon-ok"></span> Login</button>
-        <button ui-sref='.register' type="button" style='margin: 10px;' class="btn btn-success btn-block btn3d"><span class="glyphicon glyphicon-cloud"></span> Sign Up</button>
-        <button type="button" style='margin: 10px;'  data-toggle="modal" data-target="#myModal" class="btn btn-danger btn-block btn3d"><span class="glyphicon glyphicon-leaf"></span> LogOut</button>
+        <button ui-sref='.login' type="button"  class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-ok"></span> Log In</button>
+        <button ui-sref='.register' type="button"  class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span>  Sign Up</button>
+        <button type="button"   data-toggle="modal" data-target="#myModal" class="btn btn-danger btn-lg btn3d"><span class="glyphicon glyphicon-leaf"></span> Log Out</button>
   </div>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
