--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,8 +1,8 @@
 <div layout="column" ng-cloak>
-  <div class='box' style='text-align: center;'>
+  <div class='box' style='text-align: center; background-color:#607D8B;'>
   <h1 style='font-family: Nunito;'>Sign Up!</h1>
   <br>
-    <form ng-submit='createAccount(credentials)'>
+    <form class='ioForm' ng-submit='createAccount(credentials)'>
       <label>Username</label>
       <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
       <label>Password</label>
