--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -54,13 +54,13 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
           <button type="button" data-toggle="modal" data-target="#aaplModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
+          <button type="button" ui-sref='dash.orders' class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
           <button type="button" data-toggle="modal" data-target="#msftModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
-          <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
+          <button type="button" ui-sref='dash.orders' class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
         </div>
       </div>
     </div>
