--- a/public/partials/stock2.html
+++ b/public/partials/stock2.html
@@ -30,9 +30,31 @@
         <div class='row'>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box" style="text-align: center;">
-              <button type="button" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
+              <button type="button" data-toggle="modal" data-target="#googModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
               <button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
             </div>
           </div>
         </div>
+  </div>
+  <div class="modal fade" id="googModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style='text-align:center;'>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h2 class="modal-title" id="myModalLabel">New Order</h2>
+        </div>
+        <div class="modal-body" style='text-align: center;'>
+            <label>Stock</label>
+            <h5 style='text-align: center;' value=type='text'>Google</h5>
+            <label>Price</label>
+            <h5 style='text-align: center;' type='text'>{{goog}}</h5>
+            <label>Quantity</label><br>
+            <input ng-model='qty' style='text-align: center;' type='number'></input>
+            <h3>Order Total: {{goog* qty || 0 | currency}}</h3>
+        </div>
+        <div class="modal-footer" style='text-align:center;'>
+          <button type="button" data-dismiss="modal" ng-click="googOrder()"  style='margin: 10px;' class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> BUY</button>
+        </div>
+      </div>
+    </div>
   </div>
