--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,7 +44,7 @@
   text-align: center;
   font-size: 20px; }
 
-.nav-side-menu .toggle-btn {
+.nav-side-menu .toggle-btn-inverse {
   display: none; }
 
 .nav-side-menu ul,
@@ -141,16 +141,17 @@
     width: 100%;
     margin-bottom: 10px; }
 
-  .nav-side-menu .toggle-btn {
+
+  .nav-side-menu .toggle-btn-inverse {
     display: block;
     cursor: pointer;
     position: absolute;
     right: 10px;
-    top: 10px;
+    top: 25px;
     z-index: 10 !important;
     padding: 3px;
-    background-color: #ffffff;
-    color: #000;
+    /*background-color: #ffffff;*/
+    color: yellow;
     width: 40px;
     text-align: center; }
 
@@ -162,14 +163,16 @@
 
   .innerDash {
     width: 100%;
-    margin: auto; } }
+    margin: 0; }
+  }
 @media (min-width: 767px) {
   .nav-side-menu .menu-list .menu-content {
     display: block; }
 
   .innerDash {
     width: 100%;
-    margin: auto; } }
+    margin: 0; }
+}
 body {
   margin: 0px;
   padding: 0px; }
@@ -279,8 +282,19 @@ body {
   text-align: center; }
 
 #portalRow {
-  margin-top: 5%; }
+  margin-top: 2%;
 
+}
+
+#portalRow button{
+  font-size: 3em;
+  margin-top: 2%;
+  margin: 2%;
+}
+
+.ioForm{
+  font-size: 1.5em;
+}
 /*# sourceMappingURL=style.css.map */
 .btn3d {
   position: relative;
@@ -391,6 +405,9 @@ body {
     text-align: center;
   }
 
+  #ordersTable th{
+    text-align: center;
+  }
 
   #ordersTable td{
     color:#76FF03;
@@ -413,6 +430,14 @@ body {
   }
   #balanceBox span{
     text-align: center;
+  }
+
+  .menu-list li{
+    padding: 2%;
+  }
+
+  .menu-list a{
+    font-size: 1.2em;
   }
 
 /*# sourceMappingURL=style.css.map */
